fix(about): hide on mobile

--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -10,14 +10,15 @@ $width: 25rem;
   position: fixed;
   z-index: 10;
   top: 0;
-  left: 0;
+  right: 100%;
   width: 100%;
   padding: 2rem;
   font-family: 'Bad Script', cursive;
   font-size: 1.5rem;
 
   @include screen.md {
-    top: 0;
+    right: unset;
+    left: 0;
     display: flex;
     width: $width;
     height: 100%;
@@ -80,7 +81,6 @@ $width: 25rem;
   position: relative;
   width: 100%;
   height: 100vh;
-  padding-top: 6rem;
 
   @include screen.md {
     width: calc(100% - $width);
