--- a/src/components/Gallery.module.scss
+++ b/src/components/Gallery.module.scss
@@ -8,7 +8,6 @@ $padding: 6rem;
   flex-direction: column;
   align-items: center;
   padding: $padding 2rem;
-  padding-top: calc($padding * 1.75);
 
   @include screen.md {
     flex-direction: row;
